Backport to JDK 9 (8 coming)
Run test on jdk9
As the automatic detection method is turned off when any processor is configured explicitly, Lombok has to be set explicitly
UniJ - UniLists.of etc…
Remove redundant GroupIDs - they are inherited
UniJ doesn’t support Optional or Duration
https://github.com/tlinkowski/UniJ/issues/54
AtomicBoolean java 8 support
Duration.convert duration intro’d in 11
Broken on java 8 - class file version too high in UniJ
JVM locations 8 vs 9